--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,11 +5,26 @@
     android:layout_margin="15dp"
     android:orientation="vertical" >
 
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal" >
+
+        <com.google.android.youtube.player.YouTubePlayerView
+            android:id="@+id/youtube_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
+
+
     <TextView
         android:id="@+id/txtStep"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/steps" />
+
 
     <Button
         android:id="@+id/btnStart"
@@ -22,13 +37,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/consent" />
-    
+
+
+
     <TextView
         android:id="@+id/txtStatus"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="" />
 
+    <!--
     <TextView
         android:id="@+id/txtbpm"
         android:layout_width="match_parent"
@@ -44,6 +62,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="" />
+
+        -->
 
 </LinearLayout>
 
